src/index.css
/* ... */
.tool_card img {
    width: 75%;
    height: auto;
    object-fit: contain;
    margin-bottom: 12px;
}

.tool_name_parent {
    position: absolute;
    left: 0;
    right: 0;
    bottom: 0px;
    z-index: 1;
    margin: auto;
    display: flex;
    justify-content: center;
    align-items: center;
}

.tool_name_parent .curve {
    z-index: -1;
    bottom: -48px;
    position: absolute;
    height: 190px;
    width: 270px;
    border-radius: 50%;
    background: #000000;
    margin: auto;
    display: flex;
    justify-content: center;
    align-items: center;
}

.tool-name-display {
    height: 130px;
    width: 130px;
    border-radius: 50%;
    display: flex;
    justify-content: center;
    align-items: center;
    box-shadow: 0px 4.07px 8.14px 8.14px #00000040 inset;
}

.tool_card.active {
    transform: scale(1.25);
    z-index: 10;
}

.swiper-slide {
    /* opacity: .5; */
    transition: opacity 0.3s ease;
}

.swiper-slide-active {
    /* opacity: 1; */
}

/* tools - end */
/* module - start */
.modules-section {
    position: relative;
}

.modules-section .section_container {
    padding-top: 90px;
}

.tabs-wrapper {
    position: relative;
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-top: 25px;
    padding-bottom: 260px;
    /* <-- prevents overlap */
}

.tabs {
    background: #000;
    display: inline-flex;
    gap: 20px;
    padding: 10px 25px;
    border-radius: 30px;
    position: relative;
}

.tab {
    background: none;
    border: none;
    color: #fff;
    padding: 5px 5px;
    cursor: pointer;
    font-size: 14px;
    font-weight: 500;
    position: relative;
    transition: 0.2s;
}

.tab.active {
    color: #fff;
    font-weight: 600;
}

.tab:hover {
    color: var(--c2);
}

.tab.active::after {
    content: "";
    position: absolute;
    bottom: -34px;
    left: 50%;
    transform: translateX(-50%);
    width: 35px;
    height: 25px;
    background: #000;
    clip-path: polygon(50% 100%, 0 0, 100% 0);
}

.tab-content-box {
    background:
        linear-gradient(180deg, #d9d9d900 94.17%, #f5f3f9 99.03%),
        linear-gradient(270deg, #d9d9d900 94.2%, #f5f3f9 100%), linear-gradient(90deg, #ffffff00 93.23%, #ffffff 100%),
        linear-gradient(180deg, #ffffff00 0%, #ffffff 0%, rgba(255, 255, 255, 0) 22%),
        linear-gradient(180deg, #ffffff00 0%, rgba(36, 184, 236, 0.2) 100%);
    border-radius: 12px;
    padding: 20px 25px;
    margin-top: 25px;
    max-width: 340px;
    color: #000;
}

.tab-content-box ul {
    padding-left: 18px;
}

.tab-content-box .download_icon {
    background: var(--c1);
    padding: 10px;
    height: 30px;
    width: 30px;
    border-radius: 50%;
    display: flex;
    justify-content: center;
    align-items: center;
}

@media (max-width: 576px) {
    .tabs-wrapper {
        display: flex;
        flex-direction: column;
        align-items: center;
        margin-top: 25px;
    }

    .tabs {
        background: #000;
        display: inline-flex;
        gap: 20px;
        width: 100%;
        padding: 10px 25px;
        border-radius: 30px;
        position: relative;
        white-space: nowrap;
        overflow-x: auto;
        overflow-y: visible;
        /* IMPORTANT: so arrow shows */
        scrollbar-width: none;
    }

    .tabs::-webkit-scrollbar {
        display: none;
    }

    .tabs {
        background: #000;
        display: inline-flex;
        gap: 5px;
        width: 100%;
        padding: 10px;
        border-radius: 30px;
        position: relative;
        white-space: nowrap;
        overflow: inherit;
        scrollbar-width: none;
    }

    .tab {
        font-size: 13px;
    }

    .tab.active {
        color: #fff;
        font-weight: 600;
    }

    .tab.active::after {
        content: "";
        position: absolute;
        bottom: -28px;
        left: 50%;
        transform: translateX(-50%);
        width: 35px;
        height: 22px;
        background: #000;
        clip-path: polygon(50% 100%, 0 0, 100% 0);
    }

    .tab-content-holder {
        width: 100%;
        display: flex;
        justify-content: center;
    }

    .tab-content-box {
        background: #f7fafd;
        border-radius: 12px;
        padding: 20px 25px;
        margin-top: 60px;
        width: fit-content;
        color: #000;
        left: 0 !important;
        right: 0 !important;
        margin: auto;
        transform: none !important;
    }

    .tab-content-box ul {
        padding-left: 18px;
    }
}

/* module - end */
.advantage-section h4 {
    font-size: 16px;
    margin-bottom: 12px;
}

.advantage-section p {
    font-size: 14px;
    line-height: 20px;
    margin: 0;
}

.inner_adv {
    position: relative;
    width: 100%;
    max-width: 260px;
    aspect-ratio: 1/1;
    /* keeps square automatically */
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 16px;
}

.inner_adv_bg {
    position: absolute;
    inset: 0;
    z-index: 1;
}

.inner_adv_bg svg {
    width: 100%;
    height: 100%;
}

.inner_adv_content {
    position: relative;
    z-index: 2;
    padding: 10px;
}

/* Puzzle Images Position */
.puzzle_images {
    position: absolute;
    height: 100%;
    width: 90%;
    top: 0;
    left: 30px;
    right: 0;
    margin: auto;
    display: flex;
    justify-content: space-between;
    pointer-events: none;
    align-items: center;
}

.puzzle_images .puzzle-1 {
    height: 150px;
}

.puzzle_images .puzzle-2 {
    height: 200px;
}

.details_bottom_part {
    background: url(../public/assets/images/details-page/green-bg.png);
    background-size: cover;
    background-position: center top;
}
/* ... */

